sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort3.scala.code
def cocktailSort3() {

var debut : Int=0 
var fin : Int=getNombreValeurs() -2
var swap: Boolean=true


do { 
	swap=false
	for (i<- debut to fin) {
		if (plusPetit (i+1,i)) {
			echange (i,i+1)
			swap=true
		}
	}
	fin=fin-1

	if (swap = false) {return}
	
	

	for(i<-fin to debut by -1) {
		if (plusPetit (i+1,i)) {
			echange (i,i+1)
			swap=true
		
	} 
	}
	debut=debut+1
   
} while (swap)
}

}
